# Machine-Learning

hw1/: T.csv  X.csv  hw1_311511038.ipynb  hw1_311511038.py  hw1_StudentID.ipynb  pyproject.toml
hw2/: hw2_311511038.ipynb  hw2_311511038.py  pyproject.toml
hw2/gaussian_process/: t.csv  x.csv
hw3/: hw3_311511038.ipynb  hw3_311511038.py  pyproject.toml  t_train.csv
